# Exjobb

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
Basic_Tutorial/: phononmin.py  tutorial.ipynb
Results/: Instructions.md  Visualisation.ipynb  getdos.conf  mesh_amp.conf  mode_follow.bash  opt1.traj
Results/STDEV1E-2/: 10-2TDOS  10-2thermal_properties.yaml  100TDOS  100thermal_properties.yaml  10TDOS  10thermal_properties.yaml  20-2TDOS  20-2thermal_properties.yaml  20TDOS  20thermal_properties.yaml  50-2TDOS  50-2thermal_properties.yaml  50TDOS  50thermal_properties.yaml  names.md
