[tool.poetry]
name = "exjobb"
version = "0.1.0"
description = "Calculating vibrational properties of intercalation compounds from first principles."
authors = ["armino112 <armin.irannejad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
