[tool.poetry]
name = "exjobb"
version = "0.3.2"
description = "Calculating vibrational properties of intercalation compounds from first principles."
authors = ["armino112 <armin.irannejad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^7.33.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default
upload_to_pypi = false                      # don't auto-upload to PyPI
